--- a/src/Components/ProfileCard/ProfileCard.css
+++ b/src/Components/ProfileCard/ProfileCard.css
@@ -4,6 +4,8 @@
     flex-flow: column;
     position: relative;
     gap: 1rem;
+    overflow: hidden;
+    background: var(--cardColor);
 }
 
 .ProfileImages{
@@ -76,3 +78,12 @@
     height: 150%;
     border-left: 2px solid var(--hrColor);
 }
+
+.profileCard>span{
+    font-weight: bold;
+    color: orange;
+    align-self: center;
+    margin-bottom: 1rem;
+    cursor: pointer;
+}
+
